--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "alexa-skill-local": "^1.3.0",
     "ask-sdk": "^2.1.0",
+    "dotenv": "^6.1.0",
     "request": "^2.88.0"
   }
 }
